--- a/wp-content/themes/youthforum/style.css
+++ b/wp-content/themes/youthforum/style.css
@@ -56,6 +56,13 @@ h2 {
 	color: #223F78;
 }
 
+
+.fake-div {
+	width:100%;
+	height: 1280px;
+	position:relative;
+  }
+
 .footer-text {
 	font-family: Aileron-Bold !important;
 	font-size: 14px;
